<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_colors"
    tools:context=".ui.signup.SignUpActivity">

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/ic_icon_create"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/signup_box" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/signup_box"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginEnd="18dp"
        android:background="@drawable/background_frame"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/signup_textInput_Name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            app:endIconMode="clear_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:startIconDrawable="@drawable/ic_icon_user"
            style="@style/InputText">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/signup_editText_Name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/text_name"
                android:imeOptions="actionDone"
                android:inputType="text"
                style="@style/EditText" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/signup_textInput_Email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            app:endIconMode="clear_text"
            app:errorTextColor="@color/red"
            app:errorIconDrawable="@drawable/ic_icon_error"
            app:errorEnabled="false"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/signup_textInput_Name"
            app:startIconDrawable="@drawable/ic_icon_email"
            style="@style/InputText">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/signup_editText_Email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/text_email"
                android:imeOptions="actionDone"
                android:inputType="text"
                style="@style/EditText" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/signup_textInput_Password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            app:endIconMode="password_toggle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/signup_textInput_Email"
            app:startIconDrawable="@drawable/ic_icon_password"
            style="@style/InputText">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/signup_editText_Password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/text_password"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                style="@style/EditText" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/signup_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="17dp"
            android:layout_marginBottom="27dp"
            android:text="@string/text_sign_up"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/signup_textInput_Password"
            style="@style/Button" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/signup_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="27dp"
        android:text="@string/text_back"
        android:drawableEnd="@drawable/ic_icon_arrow_right"
        android:drawableStart="@drawable/ic_icon_arrow_left"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/signup_box"
        style="@style/TextFields" />

</androidx.constraintlayout.widget.ConstraintLayout>